--- a/sgd-webapp/src/main/webapp/pages/gestion/unidades.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/gestion/unidades.xhtml
@@ -17,16 +17,19 @@
 						class="fa-solid fa-plus"></i>
 					</a>
 				</div>
+				<h:messages id="messages" styleClass="messages error"/>
 				<div class="form-container">
 					<h:form class="form container form-gestion">
 						<div class="item">
-							<label>Nombre</label>
-							<h:inputText value="#{gestionController.ua.nombre}" />
+							<label>Nombre<span class="required">*</span></label>
+							<h:inputText value="#{gestionController.ua.nombre}" required="true" requiredMessage="Debe ingresar el nombre de la unidad académica"/>
 						</div>
 						<div class="item">
 							<h:commandButton styleClass="button button_rojo"
 								action="#{gestionController.agregarUA}"
-								value="Guardar" update="tableForm" />
+								value="Guardar" update="tableForm">
+								<f:ajax execute="@form" render="tableForm, messages" />	
+							</h:commandButton>
 						</div>
 					</h:form>
 					<button class="material-symbols-outlined close-button">
