--- a/sgd-webapp/src/main/webapp/pages/programas/programa.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/programas/programa.xhtml
@@ -341,7 +341,7 @@
 									</div>
 									<div class="item">
 										<h:commandButton class="button button_rojo"
-											action="#{pCtrl.agregarDocente}" value="Guardar">
+											action="#{pCtrl.agregarDocente}" value="Agregar docente">
 											<f:ajax execute="form:group-docentes"
 												render="form:table-docentes form:group-docentes form:messages-docentes" />
 										</h:commandButton>
