--- a/sgd-webapp/src/main/webapp/pages/programas/ver-programas.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/programas/ver-programas.xhtml
@@ -16,6 +16,7 @@
 
 		<section>
 			<article class="main-container">
+				<h:messages id="messages" styleClass="messages error" />
 				<h:form>
 					<div class="item">
 						<h:commandLink class="button agregar-button"
