--- a/sgd-webapp/src/main/webapp/pages/programas/revision.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/programas/revision.xhtml
@@ -681,9 +681,15 @@
 						</div>
 					</div>
 
-					<div class="item">
-						<h:commandButton class="button_rojo button_large button"
-							action="#{pCtrl.guardarRevision}" value="Enviar sugerencias"></h:commandButton>
+					<div class="buttons">
+						<div class="item">
+							<h:commandButton class="button_rojo button_large button"
+								action="#{pCtrl.guardarRevision}" value="Enviar sugerencias"></h:commandButton>
+						</div>
+						<div class="item">
+							<h:commandButton class="button_rojo button_large button"
+								action="#{pCtrl.aprobarPrograma}" value="Aprobar"></h:commandButton>
+						</div>
 					</div>
 				</h:form>
 			</article>
