Se agrega adscripcion a usuario, redondeo de créditos y label en pdf sobre carreras

--- a/sgd-webapp/src/main/webapp/pages/gestion/usuario.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/gestion/usuario.xhtml
@@ -3,6 +3,10 @@
 	xmlns:ui="jakarta.faces.facelets" xmlns:p="http://primefaces.org/ui"
 	template="/layout/template.xhtml">
 
+	<f:metadata>
+		<f:importConstants type="com.fhce.sgd.model.enums.EnumTipoAdscripcion" />
+	</f:metadata>
+
 	<ui:define name="content">
 		<section class="intro">
 			<article>
@@ -12,32 +16,90 @@
 		</section>
 		<section>
 			<article>
-				<h:form class="form container">
+				<h:form class="form container" id="form">
 					<div class="item">
-						<label>Nombre completo</label>
+						<label class="item-label">Nombre completo</label>
 						<h:inputText value="#{gestionController.user.fullname}" />
 					</div>
 					<div class="item">
-						<label>Nombre de usuario</label>
+						<label class="item-label">Nombre de usuario</label>
 						<h:inputText value="#{gestionController.user.username}" />
 					</div>
-					<h:panelGroup layout="block" class="item" rendered="#{not gestionController.edicionUsuario}">
-						<label>Contraseña</label>
+					<h:panelGroup layout="block" class="item"
+						rendered="#{not gestionController.edicionUsuario}">
+						<label class="item-label">Contraseña</label>
 						<h:inputSecret value="#{gestionController.user.password}" />
 					</h:panelGroup>
 					<div class="item">
-						<label>Rol</label>
+						<label class="item-label">Rol</label>
 						<h:selectOneMenu value="#{gestionController.user.idRol}">
 
 							<f:selectItem itemLabel="Selecciona" itemValue="" />
-							<f:selectItems value="#{gestionController.roles}"
-								var="r" itemValue="#{r.id}" itemLabel="#{r.nombre}" />
+							<f:selectItems value="#{gestionController.roles}" var="r"
+								itemValue="#{r.id}" itemLabel="#{r.nombre}" />
 						</h:selectOneMenu>
 					</div>
 					<div class="item">
+						<label class="item-label">Tipo de adscripción</label>
+						<h:selectOneMenu value="#{gestionController.user.tipoAdscripcion}">
+
+							<f:selectItem itemLabel="Selecciona" itemValue="" />
+							<f:selectItems value="#{gestionController.itemsTipoAdscripcion}"
+								var="a" itemValue="#{a}" itemLabel="#{a.label}" />
+							<f:ajax render="form:adscripciones" />
+						</h:selectOneMenu>
+					</div>
+
+					<h:panelGroup id="adscripciones" layout="block">
+						<h:panelGroup layout="block" class="item"
+							rendered="#{gestionController.user.tipoAdscripcion == EnumTipoAdscripcion.UA}">
+							<label class="item-label">Unidades académicas<span
+								class="required">*</span></label>
+							<p:selectManyCheckbox value="#{gestionController.user.unidades}"
+								layout="custom" id="custom" required="true"
+								requiredMessage="Debe seleccionar al menos una unidad académica">
+								<f:selectItems value="#{gestionController.unidades}"
+									var="unidad" itemLabel="#{unidad.nombre}" itemValue="#{unidad}" />
+							</p:selectManyCheckbox>
+
+							<div class="item item-ua">
+								<ui:repeat value="#{gestionController.unidades}" var="u"
+									varStatus="v" id="repeat">
+									<div class="item-checkbox">
+										<p:checkbox id="opt-#{v.index+1}" for=":form:custom"
+											itemIndex="#{v.index+1}" />
+										<p:outputLabel value="#{u.nombre}" />
+									</div>
+								</ui:repeat>
+							</div>
+						</h:panelGroup>
+						<h:panelGroup layout="block" class="item"
+							rendered="#{gestionController.user.tipoAdscripcion == EnumTipoAdscripcion.CARRERA}">
+							<label class="item-label">Carreras<span class="required">*</span></label>
+							<p:selectManyCheckbox value="#{gestionController.user.carreras}"
+								layout="custom" id="carreras" required="true"
+								requiredMessage="Debe seleccionar al menos una carrera">
+								<f:selectItems value="#{gestionController.carreras}"
+									var="carrera" itemLabel="#{carrera.nombre}"
+									itemValue="#{carrera}" />
+							</p:selectManyCheckbox>
+
+							<div class="item">
+								<ui:repeat value="#{gestionController.carreras}" var="c"
+									id="carr" varStatus="v2">
+									<div class="item item-carrera-area">
+										<div class="item-checkbox">
+											<p:checkbox for="form:carreras" itemIndex="#{v2.index}" />
+											<p:outputLabel value="#{c.nombre}" />
+										</div>
+									</div>
+								</ui:repeat>
+							</div>
+						</h:panelGroup>
+					</h:panelGroup>
+					<div class="item">
 						<h:commandButton styleClass="button button_rojo button_large"
-							action="#{gestionController.agregarUsuario}" value="Guardar"
-							update="tableForm" />
+							action="#{gestionController.agregarUsuario}" value="Guardar" />
 					</div>
 				</h:form>
 			</article>
